# berend_gpt-main

./: .Dockerfile.un~  .Dockerfile~.un~  Dockerfile  Dockerfile~  Dockerfile~~  README.md  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.streamlit/: config.toml
app/berend_gpt/: ..env.un~  .env~  .main.py.un~  main.py  ui.py~
app/berend_gpt/components/: .sidebar.py.un~  sidebar.py
app/berend_gpt/pages/: 0_Lesplan_Demo.py  6_Samenvatter_Demo.py
berend_gpt/: .ui.py.un~  main.py  main.py~  ui.py
berend_gpt/core/: caching.py  chunking.py  embedding.py  qa.py  utils.py
berend_gpt/pages/: 0_Lesplan_Demo.py  11_De_Kennisbot_Demo.py  12_De_Rollenspeler_Demo.py  13_2De_Rollenspeler_Demo.py  2_DataFrame_Demo.py  5_Chat_Demo.py  6_Samenvatter_Demo.py  9_Broodje_Berend_Demo.py  opleidingen.csv  opleidingen.txt
